@@ -11,7 +11,7 @@ Part 1 - Implement the front end UI:
         ✔ If you middle click or try to open a news item in a new tab, you can an error @started(18-07-25 11:58) @done(18-08-01 11:03) @lasted(6d23h5m12s)
         ✔ Typing in localhost:3000newsitem will return a blank screen @done(18-08-10 17:39)
         ✔ The random image function returns the same image. Not a big deal but should be fixed before the end. @done(18-07-31 17:41)
-        ☐ Any ID that doesn't exists should return an error page. @started(18-08-01 11:47)
+        ✔ Any ID that doesn't exists should return an error page. @started(18-08-01 11:47) @done(18-08-29 11:13) @lasted(3w6d23h26m32s)
         ✔ Routing Redirect Error relating to /theKnews/.See the console. @started(18-08-07 16:07) @done(18-08-07 16:17) @lasted(10m39s)
         ✔ If you refresh the page anywhere you return to home @started(18-08-07 16:07) @done(18-08-07 16:17) @lasted(10m37s)
             I fixed these 2 errors by messing with the switch statement but I think this will mess up on deployment. 
@@ -26,11 +26,11 @@ Part 1 - Implement the front end UI:
             Button that changes font size in articles.
         
         I should consider replacing the random images with my own hosted images to help future proof the website
-        ☐ There should be a scroll to top button
+        ☐ There should be a scroll to top button @started(18-08-29 11:13)
         Think about pagination / infinite scroll functionality
 
         ✔ Get routes up and running once basic structure is in place. @done(18-07-24 17:47)
-        ☐ Mobile Menu should be controlled by swipe gesture or button located at bottom of page
+        ☐ Mobile Menu should be controlled by swipe gesture or button located at bottom of page @started(18-08-29 11:13)
             This is a good idea but I'm not sure where to even start with this.
             Could just use a basic menu for this project and integrate gestures in the next
        / ☐ Media Queries
@@ -127,7 +127,7 @@ Part 1 - Implement the front end UI:
         ✔ Implement some kind of social media area with icons, email, links etc @done(18-08-14 16:30)
         ✔ Add a recommended reading column using contents from the database. @started(18-08-14 16:33) @done(18-08-24 12:17) @lasted(1w2d19h44m45s)
             It Currently uses a href instead of redirect so I might want to rethink this later but it works just fine and I dont see an issue.
-
+        ☐ Clean Up Recommended reading bar styling @started(18-08-29 11:14)
     theKnews:
         ✔ Create Login System @started(18-08-21 13:58) @done(18-08-21 17:31) @lasted(3h33m15s)
             ✔ Log In Button @started(18-08-21 14:02) @done(18-08-21 17:31) @lasted(3h29m9s)
@@ -173,6 +173,13 @@ Part 2 Implement Database functionality:
      ✔ Implement User Authorization so that only I can access the form. @started(18-08-13 18:04) @done(18-08-22 12:32) @lasted(1w1d18h28m36s)
      ✔ Can you re-route to the article you just uploaded on sumbit?? @started(18-08-17 13:26) @done(18-08-17 13:43) @lasted(17m40s)
      ☐ Implement some sort of like and dislike functionality @started(18-08-15 11:17)
+        // Have it working with componentWillMount but not yet onClick 12:14 29/08/2018
+        ✔ Implement Like functionality @done(18-08-29 12:19)
+            // Got it. I had to setState and then update the database
+        ✔ Implement Dislike functionality @done(18-08-29 12:34)
+            // Copy and paste really. I could make it so you can't go negative dislikes
+        ☐ Allow like/dislike ONLY for logged in users @started(18-08-29 11:25)
+
      ✔ Form should take in a series of mandatory inputs or not be able to submit @started(18-08-15 15:23) @done(18-08-17 13:43) @lasted(1d22h20m56s)
         ✔ Will need to complete User Auth before I can do Author @started(18-08-17 13:44) @done(18-08-22 17:02) @lasted(5d3h18m3s)
      ✔ Be able to see posts linked to current account on myKnews page @started(18-08-23 12:00) @done(18-08-23 14:18) @lasted(2h18m12s)
@@ -183,7 +190,6 @@ Part 2 Implement Database functionality:
         ☐ BUG:: You are unable to create a new article straight away unless you refresh the page
         ☐ When you delete an article the page should auto-refresh.
         //☐ ISSUE:: The key that is now used is +1 the number of objects in the database. Not an issue I think but might cause some problems
-     ☐ Ability to Like and Dislike Posts @started(18-08-13 18:04)
      ☐ Look into loading a limited number of news items on the home page. The scroll could be used to detect the scroll position and load more things from the database.
      ☐ Ability to approve posts made by unauthorized users @started(18-08-22 16:04)
      ✔ Organise Components a bit neater @done(18-08-13 18:02)
@@ -201,10 +207,16 @@ Deployed Project To-Do:
     ☐ The split main header in the news page appears too early.
     ☐ BUG: If you refresh the page on a news article you will get a 404 error.
     
-28 August 2018:
-    ☐ Any ID that doesn't exists should return an error page.
+
+29 August 2018:
+    ☐ Implement some sort of like and dislike functionality 
     ☐ Deploy new build to portfolio
     ☐ Write blog
+
+28 August 2018:
+    ✔ Any ID that doesn't exists should return an error page. @done(18-08-29 11:13)
+    ✘ Deploy new build to portfolio @cancelled(18-08-29 11:12)
+    ✘ Write blog @cancelled(18-08-29 11:12)
 24 August 2018:
     ✔ Create UI letting users know about article limit this before they try to type stuff in @done(18-08-24 10:50)
     ✔ Automate Post date @done(18-08-24 11:24)
