@@ -1,5 +1,6 @@
 Changelog::
-
+29 August 2018
+        You can now like and dislike articles
 28 August 2018
         Website now has janky as hell basic error handling for wrong article urls
 
